--- a/src/AspNetCore.Identity.PostgreSQL.Manager/appsettings.json
+++ b/src/AspNetCore.Identity.PostgreSQL.Manager/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "IdentityDbConnection": "Server=localhost;Port=5432;Database=kartr;User Id=postgres;Password=Password1;Pooling=false;Keepalive=10"
+      "IdentityDbConnection": "Server=localhost;Port=5432;Database=psql_identity;User Id=postgres;Password=Password1;Pooling=false;Keepalive=10"
     },
     "Logging": {
         "IncludeScopes": false,
